# SenScriptsDecompiler

./: CMakeLists.txt  CMakeSettings.json
headers/: CS4InstructionsSet.h  decompiler.h  instruction.h
sources/: decompiler.cpp  instruction.cpp  utilities.cpp
